<resources>
    <string name="app_name">Qiwi Offline</string>
    <string name="phone_number">Номер телефона</string>
    <string name="enter_phone_number">Введите номер телефона</string>
    <string name="make_password">Придумайте пароль для входа</string>
    <string name="enter_password">Введите пароль</string>
    <string name="forgot_password">Забыли\nпароль?</string>
    <string name="empty_password_digit">·</string>
    <string name="how_are_you_going_to_use_app">Как вы собираетесь использовать\nприложение?</string>
    <string name="i_am_purchaser">Как покупатель</string>
    <string name="i_am_merchant">Как продавец</string>
    <string name="you_can_change_mode">Вы можете изменить режим в любое время в настройках</string>
    <string name="top_up_cash">Пополнить кошелёк</string>
    <string name="pay_by_nfc">Оплатить по NFC</string>
    <string name="pay_by_qr">Оплатить по QR</string>
    <string name="contactless_payment">Бесконтактная оплата</string>
    <string name="attach_device">Приложите это устройство\nк устройству продавца</string>
    <string name="show_qr">Покажите QR код продавцу</string>
    <string name="ready">Готово</string>
    <string name="wrong_password">Неверный пароль. Попробуйте ещё раз</string>
    <string name="qiwi_wallet_number">Номер QIWI-кошелька</string>
    <string name="settings">Настройки</string>
    <string name="security">Безопасность</string>
    <string name="help">Помощь</string>
    <string name="go_to_merchant_mode">Перейти в режим продавца</string>
    <string name="go_to_purchaser_mode">Перейти в режим покупателя</string>
    <string name="exit_app">Выйти из приложения</string>
    <string name="payment_in_shop">Оплата\nв магазине</string>
    <string name="payment_in_shop_with_balance">Оплата\nв магазине\n\nБаланс:</string>
    <string name="sms_sent">SMS с кодом отправлено\nна</string>
    <string name="send_again">Отправить SMS повторно через:</string>
    <string name="deny_payment">Отменить оплату</string>
    <string name="confirm_payment">Потдвердить оплату</string>
    <string name="confirmation_payment">Подтверждение оплаты</string>
    <string name="payment_completion">Завершение оплаты</string>
    <string name="payment_successfull">Оплата прошла успешно!</string>
    <string name="input_amount">Укажите сумму платежа</string>
    <string name="qr_camera">Наведите камеру на QR - код,\nчтобы оплатить</string>
    <string name="waiting_for_purchaser">Ожидаем ответа покупателя</string>
</resources>