<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordEnterActivity">

    <TextView
        android:id="@+id/wrongPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:textColor="#FF0000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/makePasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/enter_password"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passwordDigit1"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLength="1"
        android:text="@string/empty_password_digit"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makePasswordText" />

    <TextView
        android:id="@+id/passwordDigit2"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLength="1"
        android:text="@string/empty_password_digit"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintEnd_toStartOf="@+id/passwordDigit3"
        app:layout_constraintStart_toEndOf="@+id/passwordDigit1"
        app:layout_constraintTop_toBottomOf="@+id/makePasswordText" />

    <TextView
        android:id="@+id/passwordDigit3"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLength="1"
        android:text="@string/empty_password_digit"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makePasswordText" />

    <TextView
        android:id="@+id/passwordDigit4"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLength="1"
        android:text="@string/empty_password_digit"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makePasswordText" />

    <Button
        android:id="@+id/digit1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/gray"
        android:onClick="onClickDigitButton"
        android:text="1"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/digit2"
        app:layout_constraintTop_toBottomOf="@+id/passwordDigit1" />

    <Button
        android:id="@+id/digit2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/gray"
        android:onClick="onClickDigitButton"
        android:text="2"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordDigit1" />

    <Button
        android:id="@+id/digit3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/gray"
        android:onClick="onClickDigitButton"
        android:text="3"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@+id/digit2"
        app:layout_constraintTop_toBottomOf="@+id/passwordDigit1" />

    <Button
        android:id="@+id/digit4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/gray"
        android:onClick="onClickDigitButton"
        android:text="4"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/digit5"
        app:layout_constraintTop_toBottomOf="@+id/digit2" />

    <Button
        android:id="@+id/digit5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/gray"
        android:onClick="onClickDigitButton"
        android:text="5"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/digit2" />

    <Button
        android:id="@+id/digit6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/gray"
        android:onClick="onClickDigitButton"
        android:text="6"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@+id/digit5"
        app:layout_constraintTop_toBottomOf="@+id/digit2" />

    <Button
        android:id="@+id/digit7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/gray"
        android:text="7"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/digit8"
        app:layout_constraintTop_toBottomOf="@+id/digit5"
        android:onClick="onClickDigitButton" />

    <Button
        android:id="@+id/digit8"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/gray"
        android:onClick="onClickDigitButton"
        android:text="8"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/digit5" />

    <Button
        android:id="@+id/digit9"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/gray"
        android:onClick="onClickDigitButton"
        android:text="9"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@+id/digit8"
        app:layout_constraintTop_toBottomOf="@+id/digit5" />

    <Button
        android:id="@+id/digit0"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/gray"
        android:onClick="onClickDigitButton"
        android:text="0"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/digit8" />

    <Button
        android:id="@+id/erase"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/erase_icon"
        android:backgroundTint="@color/dark_gray"
        android:onClick="onClickErase"
        app:layout_constraintStart_toEndOf="@+id/digit0"
        app:layout_constraintTop_toBottomOf="@+id/digit9" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="26dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/digit0"
        app:layout_constraintTop_toBottomOf="@+id/digit7" />

</androidx.constraintlayout.widget.ConstraintLayout>